fix spacing problem with alerts, change mail message style

--- a/frontend/src/assets/css/form.scss
+++ b/frontend/src/assets/css/form.scss
@@ -32,3 +32,7 @@
     }
   }
 }
+
+.MuiAlert-standard {
+  margin-bottom: 10px;
+}
